--- a/aip.tex
+++ b/aip.tex
@@ -428,12 +428,12 @@ As suggested by \Cref{sierpinski triangle: E}, each $\sierp_{p,n}$  can be reali
 \begin{figure}
 \begin{subfigure}{.49\textwidth}
   \centering
-  \includegraphics[width=.9\linewidth]{Pictures/sierpinski3_a.pdf}
+  \includegraphics[width=.9\linewidth]{pictures/sierpinski3_a.pdf}
   \caption{Restriction to $[0,1]^2$}
 \end{subfigure}
 \begin{subfigure}{.49\textwidth}
   \centering
-  \includegraphics[width=.9\linewidth]{Pictures/sierpinski3_b.pdf}
+  \includegraphics[width=.9\linewidth]{pictures/sierpinski3_b.pdf}
   \caption{Restriction to $[0,9]^2$}
 \end{subfigure}
 \caption{The $2$-dimensional Sierpi\'nski 3-gasket}
@@ -478,7 +478,7 @@ The \emph{fractal linear program} $\fip_p(A,\vv{u})$ consists of maximizing the 
   \centering
 \begin{subfigure}{.49\textwidth}
 \centering
-  \includegraphics[width=.9\textwidth]{Pictures/ex4_char2.pdf}\hskip .04\textwidth
+  \includegraphics[width=.9\textwidth]{pictures/ex4_char2.pdf}\hskip .04\textwidth
    \captionsetup{labelformat=empty}
    \caption{$p=2$}
   % \caption{
@@ -492,7 +492,7 @@ The \emph{fractal linear program} $\fip_p(A,\vv{u})$ consists of maximizing the 
 \end{subfigure}
 \begin{subfigure}{.49\textwidth}
 \centering
-\includegraphics[width=.9\textwidth]{Pictures/ex4_char3.pdf}
+\includegraphics[width=.9\textwidth]{pictures/ex4_char3.pdf}
   \captionsetup{labelformat=empty}
   \caption{$p=3$}
 % \caption{
@@ -509,7 +509,7 @@ The \emph{fractal linear program} $\fip_p(A,\vv{u})$ consists of maximizing the 
 
 \begin{subfigure}{.49\textwidth}
 \centering
-  \includegraphics[width=.9\textwidth]{Pictures/ex4_char5.pdf}\hskip .04\textwidth
+  \includegraphics[width=.9\textwidth]{pictures/ex4_char5.pdf}\hskip .04\textwidth
   \captionsetup{labelformat=empty}
   \caption{$p=5$}
   % \caption{
@@ -523,7 +523,7 @@ The \emph{fractal linear program} $\fip_p(A,\vv{u})$ consists of maximizing the 
 \end{subfigure}
 \begin{subfigure}{.49\textwidth}
 \centering
-  \includegraphics[width=.9\textwidth]{Pictures/ex4_char7.pdf}
+  \includegraphics[width=.9\textwidth]{pictures/ex4_char7.pdf}
   \captionsetup{labelformat=empty}
   \caption{$p=7$}
   % \caption{
@@ -796,13 +796,13 @@ Therefore, to conclude our proof,  it remains to show that $\val \LP = \lambda$,
    \centering
    \begin{subfigure}{.48\textwidth}
       \centering
-      \includegraphics[width=.9\textwidth]{Pictures/newton_polyhedron.pdf}\\[1.4mm]
+      \includegraphics[width=.9\textwidth]{pictures/newton_polyhedron.pdf}\\[1.4mm]
       \caption{The Newton polyhedron of $A$}
       \label{fig: newton polyhedron}
    \end{subfigure}
    \begin{subfigure}{.48\textwidth}
       \centering
-      \includegraphics[width=.8\textwidth]{Pictures/splitting_polytope.pdf}
+      \includegraphics[width=.8\textwidth]{pictures/splitting_polytope.pdf}
       \caption{The feasible region of $\LP(A,\vv{u})$}
       \label{fig: splitting polytope}
    \end{subfigure}
@@ -1069,13 +1069,13 @@ Below, we describe the relationship between collapses and the other notions intr
 
       \ \\[.1mm] \
 
-      \includegraphics[width=.9\textwidth]{Pictures/newton_polyhedron_of_collapse.pdf}\\[2mm]
+      \includegraphics[width=.9\textwidth]{pictures/newton_polyhedron_of_collapse.pdf}\\[2mm]
       \caption{The Newton polyhedron of $\collapse{A}$}
       \label{fig: newton polyhedron of collapse}
    \end{subfigure}
    \begin{subfigure}{.49\textwidth}
       \centering
-      \includegraphics[width=.8\textwidth]{Pictures/opt_for_collapse_may_change.pdf}
+      \includegraphics[width=.8\textwidth]{pictures/opt_for_collapse_may_change.pdf}
       \caption{The feasible region of $\LP(\collapse{A},\collapse{\vv{u}})$}
       \label{fig: splitting polytope of collapse}
    \end{subfigure}
@@ -1199,7 +1199,7 @@ Also note that because $\collapse{A}$ is a monomial matrix, the inequality $\col
    The constraints for $\ip = \ip(A,\vv{u},\vv{s},q)$ in this case are $h_2 \ge 0$ and $\collapse{A}\vv{h} < \collapse{A}\tail{\vv{s}}_q$, where
    \[\collapse{A} = \begin{bmatrix}5&3&4\\ 2&8&5\end{bmatrix}. \]
    \begin{figure}
-      \includegraphics[width=.5\textwidth]{Pictures/Theta.pdf}
+      \includegraphics[width=.5\textwidth]{pictures/Theta.pdf}
       \caption{The feasible set for the integer program $\ip(A,\vv{u},\vv{s},q)$ in \Cref{ex: ft.3}, with $\lpr{q}{17}=11$}
       \label{fig: Theta}
    \end{figure}
