--- a/aip.tex
+++ b/aip.tex
@@ -1624,7 +1624,7 @@ If $\collapse{A}$ is the collapse of $A$ along $\O = \mf(A, \vv{u})$ and $q>0$ i
 \section{Arithmetic integer programs revisited}
 
 
-The remainder of this paper is dedicated to the study of the arithmetic integer programs $\IP_p(A, \vv{u}, p^e)$ described in \Cref{aip: D}, which perhaps unsurprisingly, turn out to be far more complex in nature than their non-arithmetic counterparts $\IP(A, \vv{u}, p^e)$. \daniel{Should we state the main result of this section?  \Cref{m-primary AIP: T}? }   Throughout this section, $e$ will denote a natural number, and $q$ will denote a power of $p$.  
+The remainder of this paper is dedicated to the study of the arithmetic integer programs $\IP_p(A, \vv{u}, p^e)$ described in \Cref{aip: D}, which perhaps unsurprisingly, turn out to be far more complex in nature than their non-arithmetic counterparts $\IP(A, \vv{u}, p^e)$. \daniel{Should we state the main result of this section?  \Cref{m-primary AIP: T}?} \emily{I think so.}   Throughout this section, $e$ will denote a natural number, and $q$ will denote a power of $p$.  
 
 \emily[inline]{We should write a line here to motivate \Cref{general AIP: T}.}
 
@@ -1722,8 +1722,11 @@ On the other hand, \Cref{FT: D} and \Cref{FT descriptions: P}\eqref{lambda} impl
 It is clear from these interpretations that a very small pair must also be small, and that a small pair may fail to be very small.  However, once the monomial matrix $A$ is fixed, there are only finitely pairs $(A, \vv{u})$ that are small, but not very small, as the region lying outside of the interior of the staircase determined by $A$, but within the Newton polyhedron $\N$, is bounded.%\daniel{This doesn't seem to come up later, so I decided not to add a proof.  It is mostly here for intuition, I guess.} 
 \end{remark}
 
+
 \begin{example}[Small pairs from shortfalls]  
-\label{small pairs from shortfalls: E}  If $\vv{v}$ is any point in the shortfall of some integer program $\IP = \IP(A, \vv{u}, q)$, then the pair $(A, \vv{v})$ is small.  Indeed, by definition of shortalls, we may write $\vv{v} = \vv{u}q-A\vv{h}$ for some $\vv{h} \in \opt \IP$.  Subtracting $\vv{a}_i$, the $i$-column of $A$, from both sides of this identity yields 
+\label{small pairs from shortfalls: E}  
+\emily{Is this an example or a remark?}
+If $\vv{v}$ is any point in the shortfall of some integer program $\IP = \IP(A, \vv{u}, q)$, then the pair $(A, \vv{v})$ is small.  Indeed, by definition of shortfalls, we may write $\vv{v} = \vv{u}q-A\vv{h}$ for some $\vv{h} \in \opt \IP$.  Subtracting $\vv{a}_i$, the $i$-column of $A$, from both sides of this identity yields 
 \[ \vv{v}-\vv{a}_i = \vv{u}q-A\vv{h}-\vv{a}_i = \vv{u}q-A(\vv{h}+\vv{e}_i). \] 
 
 The optimality of $\vv{h}$ implies that $\vv{h}+\vv{e}_i$ cannot satisfy the linear constraint of $\IP$, which shows that the right-hand side above is not positive.  In other words, $\vv{v} \not > \vv{a}_i$, and as $i$ was arbitrary, this shows that $(A, \vv{v})$ is small.
@@ -2517,10 +2520,10 @@ It is straightforward to check that $\ideala_p^{[N]} \subseteq I_p^{[p^e]}$ if a
 \end{proof}
 
 
-
-
-\newpage
 \section{Frobenius powers of monomial ideals}
+
+\emily[inline]{This appendix will likely be dissolved.  We may need to bring some of these definitions/properties to an appropriate section where they will be used.  }
+
 
 \subsection{Definitions}
 
